# ZipCode-discord-bot

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
include/: DiscordBot.h  PingCommand.h  SetColorCommand.h
src/: bot.cpp  main.cpp  main.ts
src-js/: main.ts
src-js/buttons/: poll_add_response.ts  poll_end.ts
src-js/commands/: reset_database.ts
src-js/modals/: poll_set_response.ts
src-js/types/: discord_interactions.ts  logging.ts
src-js/util/bot_runner/: startup.ts
src-js/util/firebase/firestore/: club_roster.ts  internal_trackers.ts  poll.ts
src-js/util/handlers/: slash_commands.ts
src-js/util/logger/targets/: console_target.ts
src/buttons/: poll_end.ts  poll_set_prompt.ts
src/commands/: color_me.ts  poll.ts  poll_create.ts  shut_down.ts
src/messages/: poll_builder.ts
src/modals/: poll_set_prompt.ts  poll_set_response.ts
src/selectmenus/: poll_publish.ts  poll_remove_response.ts
src/slashCommands/: pingCommand.cpp  setColorCommand.cpp
src/slash_commands/: slash_commands.cpp  slash_commands.hpp
src/types/: discord_interactions.ts
src/util/bot_runner/: startup.ts
src/util/bot_runner/startup_events/: firestore.ts  wait_five_seconds.ts
src/util/firebase/: club_roster.ts  root.ts
src/util/firebase/admin/: init.ts
src/util/firebase/firestore/: poll.ts  root.ts
src/util/handlers/: select_menus.ts
src/util/logger/: logger.ts
src/util/permissions/: permissions.ts
src/util/permissions/permission_levels/: permissions_bot_owner.ts
